test/Dialect/LLZK/function_restrictions_fail.llzk
// RUN: llzk-opt -split-input-file -verify-diagnostics %s

module attributes {veridise.lang = "llzk"} {
  llzk.struct @emiteq_in_compute {
    func @compute(%a: !llzk.felt, %b: !llzk.felt) -> !llzk.struct<@emiteq_in_compute> {
      // expected-error@+1 {{'llzk.emit_eq' op only valid within a 'llzk.func' named "@constrain" within a 'llzk.struct' definition}}
      llzk.emit_eq %a, %b : !llzk.felt
      %self = new_struct : !llzk.struct<@emiteq_in_compute>
      return %self : !llzk.struct<@emiteq_in_compute>
    }

    func @constrain(%self: !llzk.struct<@emiteq_in_compute>, %a: !llzk.felt, %b: !llzk.felt) { return }
  }
}
// -----
module attributes {veridise.lang = "llzk"} {
  llzk.struct @emiteq_in_compute_in_loop {
    func @compute(%a: !llzk.felt, %b: !llzk.felt) -> !llzk.struct<@emiteq_in_compute_in_loop> {
      %lb = arith.constant 0 : index
      %up = arith.constant 4 : index
      %step = arith.constant 1 : index
      scf.for %iv = %lb to %up step %step {
        // expected-error@+1 {{'llzk.emit_eq' op only valid within a 'llzk.func' named "@constrain" within a 'llzk.struct' definition}}
        llzk.emit_eq %a, %b : !llzk.felt
      }
      %self = new_struct : !llzk.struct<@emiteq_in_compute_in_loop>
      return %self : !llzk.struct<@emiteq_in_compute_in_loop>
    }

    func @constrain(%self: !llzk.struct<@emiteq_in_compute_in_loop>, %a: !llzk.felt, %b: !llzk.felt) { return }
  }
}
// -----
module attributes {veridise.lang = "llzk"} {
  llzk.struct @emiteq_in_compute_in_deep_branches {
    func @compute(%a: i1, %b: i1, %c: i1, %x: !llzk.felt, %y: !llzk.felt) -> !llzk.struct<@emiteq_in_compute_in_deep_branches> {
      scf.if %a {
        scf.if %b {
          scf.if %c {
            // expected-error@+1 {{'llzk.emit_eq' op only valid within a 'llzk.func' named "@constrain" within a 'llzk.struct' definition}}
            llzk.emit_eq %x, %y : !llzk.felt
          }
        }
      }
      %self = new_struct : !llzk.struct<@emiteq_in_compute_in_deep_branches>
      return %self : !llzk.struct<@emiteq_in_compute_in_deep_branches>
    }

    func @constrain(%self: !llzk.struct<@emiteq_in_compute_in_deep_branches>, %a: i1, %b: i1, %c: i1, %x: !llzk.felt, %y: !llzk.felt) { return }
  }
}
// -----
module attributes {veridise.lang = "llzk"} {
  llzk.struct @emitin_in_compute {
    func @compute(%a: !llzk.felt, %b: !llzk.array<5 x !llzk.felt>) -> !llzk.struct<@emitin_in_compute> {
      // expected-error@+1 {{'llzk.emit_in' op only valid within a 'llzk.func' named "@constrain" within a 'llzk.struct' definition}}
      llzk.emit_in %b, %a : !llzk.array<5 x !llzk.felt>
      %self = new_struct : !llzk.struct<@emitin_in_compute>
      return %self : !llzk.struct<@emitin_in_compute>
    }

    func @constrain(%self: !llzk.struct<@emitin_in_compute>, %a: !llzk.felt, %b: !llzk.array<5 x !llzk.felt>) { return }
  }
}
// -----
module attributes {veridise.lang = "llzk"} {
  llzk.struct @emitin_in_compute_in_loop {
    func @compute(%a: !llzk.felt, %b: !llzk.array<5 x !llzk.felt>) -> !llzk.struct<@emitin_in_compute_in_loop> {
      %lb = arith.constant 0 : index
      %up = arith.constant 4 : index
      %step = arith.constant 1 : index
      scf.for %iv = %lb to %up step %step {
        // expected-error@+1 {{'llzk.emit_in' op only valid within a 'llzk.func' named "@constrain" within a 'llzk.struct' definition}}
        llzk.emit_in %b, %a : !llzk.array<5 x !llzk.felt>
      }
      %self = new_struct : !llzk.struct<@emitin_in_compute_in_loop>
      return %self : !llzk.struct<@emitin_in_compute_in_loop>
    }

    func @constrain(%self: !llzk.struct<@emitin_in_compute_in_loop>, %a: !llzk.felt, %b: !llzk.array<5 x !llzk.felt>) { return }
  }
}
// -----
module attributes {veridise.lang = "llzk"} {
  llzk.struct @emitin_in_compute_in_deep_branches {
    func @compute(%a: i1, %b: i1, %c: i1, %x: index, %y: !llzk.array<5 x index>) -> !llzk.struct<@emitin_in_compute_in_deep_branches> {
      scf.if %a {
        scf.if %b {
          scf.if %c {
            // expected-error@+1 {{'llzk.emit_in' op only valid within a 'llzk.func' named "@constrain" within a 'llzk.struct' definition}}
            llzk.emit_in %y, %x : !llzk.array<5 x index>
          }
        }
      }
      %self = new_struct : !llzk.struct<@emitin_in_compute_in_deep_branches>
      return %self : !llzk.struct<@emitin_in_compute_in_deep_branches>
    }

    func @constrain(%self: !llzk.struct<@emitin_in_compute_in_deep_branches>, %a: i1, %b: i1, %c: i1, %x: index, %y: !llzk.array<5 x index>) { return }
  }
}
// -----
llzk.func @constrain(%a: !llzk.felt, %b: !llzk.felt) {
  // expected-error@+1 {{'llzk.emit_eq' op only valid within a 'llzk.func' named "@constrain" within a 'llzk.struct' definition}}
  llzk.emit_eq %a, %b : !llzk.felt
  return
}
// -----
llzk.func @constrain(%x: index, %y: !llzk.array<5 x index>) {
  // expected-error@+1 {{'llzk.emit_in' op only valid within a 'llzk.func' named "@constrain" within a 'llzk.struct' definition}}
  llzk.emit_in %y, %x : !llzk.array<5 x index>
  return
}
// -----
module attributes {veridise.lang = "llzk"} {
  llzk.struct @constrain_calls_compute {
    func @compute() -> !llzk.struct<@constrain_calls_compute> {
      %self = new_struct : !llzk.struct<@constrain_calls_compute>
      return %self : !llzk.struct<@constrain_calls_compute>
    }

    func @constrain(%self: !llzk.struct<@constrain_calls_compute>) {
      // expected-error@+1 {{'llzk.call' op targeting "@compute" only valid within a 'llzk.func' named "@compute" within a 'llzk.struct' definition}}
      call @constrain_calls_compute::@compute() : () -> !llzk.struct<@constrain_calls_compute>
      return
    }
  }
}
// -----
module attributes {veridise.lang = "llzk"} {
  llzk.struct @compute_calls_constrain {
    func @compute() -> !llzk.struct<@compute_calls_constrain> {
      %self = new_struct : !llzk.struct<@compute_calls_constrain>
      // expected-error@+1 {{'llzk.call' op targeting "@constrain" only valid within a 'llzk.func' named "@constrain" within a 'llzk.struct' definition}}
      call @compute_calls_constrain::@constrain(%self) : (!llzk.struct<@compute_calls_constrain>) -> ()
      return %self : !llzk.struct<@compute_calls_constrain>
    }

    func @constrain(%self: !llzk.struct<@compute_calls_constrain>) {
      return
    }
  }
}
// -----
module attributes {veridise.lang = "llzk"} {
  llzk.func @globalFunc() {
    // expected-error@+1 {{'llzk.call' op targeting "@compute" only valid within a 'llzk.func' named "@compute" within a 'llzk.struct' definition}}
    call @global_calls_compute::@compute() : () -> !llzk.struct<@global_calls_compute>
    return
  }
  llzk.struct @global_calls_compute {
    func @compute() -> !llzk.struct<@global_calls_compute> {
      %self = new_struct : !llzk.struct<@global_calls_compute>
      return %self : !llzk.struct<@global_calls_compute>
    }

    func @constrain(%self: !llzk.struct<@global_calls_compute>) {
      return
    }
  }
}
// -----
module attributes {veridise.lang = "llzk"} {
  llzk.func @globalFunc(%0: !llzk.struct<@global_calls_constrain>) {
    // expected-error@+1 {{'llzk.call' op targeting "@constrain" only valid within a 'llzk.func' named "@constrain" within a 'llzk.struct' definition}}
    call @global_calls_constrain::@constrain(%0) : (!llzk.struct<@global_calls_constrain>) -> ()
    return
  }
  llzk.struct @global_calls_constrain {
    func @compute() -> !llzk.struct<@global_calls_constrain> {
      %self = new_struct : !llzk.struct<@global_calls_constrain>
      return %self : !llzk.struct<@global_calls_constrain>
    }

    func @constrain(%self: !llzk.struct<@global_calls_constrain>) {
      return
    }
  }
}
// -----
module attributes {veridise.lang = "llzk"} {
  llzk.struct @inv_in_constrain {
    func @compute(%a: !llzk.felt) -> !llzk.struct<@inv_in_constrain> {
      %self = new_struct : !llzk.struct<@inv_in_constrain>
      return %self : !llzk.struct<@inv_in_constrain>
    }

    func @constrain(%self: !llzk.struct<@inv_in_constrain>, %a: !llzk.felt) {
      // expected-error@+1 {{'llzk.inv' op is ComputeOnly so it cannot be used within a 'llzk.func' named "@constrain" within a 'llzk.struct' definition}}
      %c = llzk.inv %a
      return
    }
  }
}
// -----
module attributes {veridise.lang = "llzk"} {
  llzk.struct @inv_in_constrain {
    func @compute(%a: !llzk.felt) -> !llzk.struct<@inv_in_constrain> {
      %self = new_struct : !llzk.struct<@inv_in_constrain>
      return %self : !llzk.struct<@inv_in_constrain>
    }

    func @constrain(%self: !llzk.struct<@inv_in_constrain>, %a: !llzk.felt) {
      // expected-error@+1 {{'llzk.inv' op is ComputeOnly so it cannot be used within a 'llzk.func' named "@constrain" within a 'llzk.struct' definition}}
      %c = llzk.inv %a
      return
    }
  }
}
// -----
module attributes {veridise.lang = "llzk"} {
  llzk.struct @compute_no_ret {
    // expected-error@+1 {{'llzk.func' op "@compute" must have exactly one return type}}
    func @compute() {
      return
    }

    func @constrain(%self: !llzk.struct<@compute_no_ret>) {
      return
    }
  }
}
// -----
module attributes {veridise.lang = "llzk"} {
  llzk.struct @call_target_compute_no_ret<[@S]> {
    func @compute() -> !llzk.struct<@call_target_compute_no_ret<[@S]>> {
      %self = new_struct : !llzk.struct<@call_target_compute_no_ret<[@S]>>
      // expected-error@+1 {{'llzk.call' op target "@compute" must have exactly one return type}}
      llzk.call @S::@compute() : () -> ()
      return %self : !llzk.struct<@call_target_compute_no_ret<[@S]>>
    }

    func @constrain(%self: !llzk.struct<@call_target_compute_no_ret<[@S]>>) {
      return
    }
  }
}
// -----
module attributes {veridise.lang = "llzk"} {
  llzk.struct @compute_multiple_ret {
    // expected-error@+1 {{'llzk.func' op "@compute" must have exactly one return type}}
    func @compute(%a: i1) -> (!llzk.struct<@compute_multiple_ret>, i1) {
      %self = new_struct : !llzk.struct<@compute_multiple_ret>
      return %self, %a : !llzk.struct<@compute_multiple_ret>, i1
    }

    func @constrain(%self: !llzk.struct<@compute_multiple_ret>, %a: i1) {
      return
    }
  }
}
// -----
module attributes {veridise.lang = "llzk"} {
  llzk.struct @call_target_compute_multiple_ret<[@S]> {
    func @compute() -> !llzk.struct<@call_target_compute_multiple_ret<[@S]>> {
      %self = new_struct : !llzk.struct<@call_target_compute_multiple_ret<[@S]>>
      // expected-error@+1 {{'llzk.call' op target "@compute" must have exactly one return type}}
      llzk.call @S::@compute() : () -> (!llzk.tvar<@S>, i1)
      return %self : !llzk.struct<@call_target_compute_multiple_ret<[@S]>>
    }

    func @constrain(%self: !llzk.struct<@call_target_compute_multiple_ret<[@S]>>) {
      return
    }
  }
}
// -----
module attributes {veridise.lang = "llzk"} {
  llzk.struct @constrain_with_ret {
    func @compute() -> !llzk.struct<@constrain_with_ret> {
      %self = new_struct : !llzk.struct<@constrain_with_ret>
      return %self : !llzk.struct<@constrain_with_ret>
    }

    // expected-error@+1 {{'llzk.func' op "@constrain" must have no return type}}
    func @constrain(%self: !llzk.struct<@constrain_with_ret>, %a: i1) -> i1 {
      return %a : i1
    }
  }
}
// -----
module attributes {veridise.lang = "llzk"} {
  llzk.struct @call_target_constrain_with_ret<[@S]> {
    func @compute(%0: !llzk.tvar<@S>) -> !llzk.struct<@call_target_constrain_with_ret<[@S]>> {
      %self = new_struct : !llzk.struct<@call_target_constrain_with_ret<[@S]>>
      return %self : !llzk.struct<@call_target_constrain_with_ret<[@S]>>
    }

    func @constrain(%self: !llzk.struct<@call_target_constrain_with_ret<[@S]>>, %0: !llzk.tvar<@S>) {
      // expected-error@+1 {{'llzk.call' op target "@constrain" must have no return type}}
      llzk.call @S::@constrain(%0) : (!llzk.tvar<@S>) -> (!llzk.tvar<@S>, i1)
      return
    }
  }
}
// -----
module attributes {veridise.lang = "llzk"} {
  llzk.struct @compute_with_wrong_ret {
    // expected-error@+1 {{'llzk.func' op "@compute" must use type of its ancestor 'llzk.struct' "@compute_with_wrong_ret" as return type}}
    func @compute() -> index {
      %b = arith.constant 2 : index
      return %b : index
    }

    func @constrain(%self: !llzk.struct<@compute_with_wrong_ret>) {
      return
    }
  }
}
// -----
module attributes {veridise.lang = "llzk"} {
  llzk.struct @call_target_compute_wrong_type_ret<[@S,@T]> {
    func @compute() -> !llzk.struct<@call_target_compute_wrong_type_ret<[@S,@T]>> {
      %self = new_struct : !llzk.struct<@call_target_compute_wrong_type_ret<[@S,@T]>>
      // expected-error@+1 {{'llzk.call' op target "@compute" expected return type '!llzk.tvar<@S>' but found 'i1'}}
      llzk.call @S::@compute() : () -> i1
      return %self : !llzk.struct<@call_target_compute_wrong_type_ret<[@S,@T]>>
    }

    func @constrain(%self: !llzk.struct<@call_target_compute_wrong_type_ret<[@S,@T]>>) {
      return
    }
  }
}
// -----
module attributes {veridise.lang = "llzk"} {
  llzk.struct @call_target_compute_wrong_tvar_param_ret<[@S,@T]> {
    func @compute() -> !llzk.struct<@call_target_compute_wrong_tvar_param_ret<[@S,@T]>> {
      %self = new_struct : !llzk.struct<@call_target_compute_wrong_tvar_param_ret<[@S,@T]>>
      // expected-error@+1 {{'llzk.call' op target "@compute" expected return type '!llzk.tvar<@S>' but found '!llzk.tvar<@T>'}}
      llzk.call @S::@compute() : () -> !llzk.tvar<@T>
      return %self : !llzk.struct<@call_target_compute_wrong_tvar_param_ret<[@S,@T]>>
    }

    func @constrain(%self: !llzk.struct<@call_target_compute_wrong_tvar_param_ret<[@S,@T]>>) {
      return
    }
  }
}
// -----
module attributes {veridise.lang = "llzk"} {
  llzk.struct @good { // expected-note {{uses this type instead}}
    func @compute() -> !llzk.struct<@good> {
      %self = new_struct : !llzk.struct<@good>
      return %self : !llzk.struct<@good>
    }
    func @constrain(%self: !llzk.struct<@good>) {
      return
    }
  }

  llzk.struct @compute_with_wrong_ret {
    // expected-error@+1 {{'llzk.func' op "@compute" must use type of its ancestor 'llzk.struct' "@compute_with_wrong_ret" as return type}}
    func @compute() -> !llzk.struct<@good> {
      %self = new_struct : !llzk.struct<@good>
      return %self : !llzk.struct<@good>
    }

    func @constrain(%self: !llzk.struct<@compute_with_wrong_ret>) {
      return
    }
  }
}
// -----
module attributes {veridise.lang = "llzk"} {
  module @one {
    llzk.struct @good { // expected-note {{uses this type instead}}
      func @compute() -> !llzk.struct<@one::@good> {
        %self = new_struct : !llzk.struct<@one::@good>
        return %self : !llzk.struct<@one::@good>
      }
      func @constrain(%self: !llzk.struct<@one::@good>) {
        return
      }
    }
  }
  module @two {
    llzk.struct @good {
      // expected-error@+1 {{'llzk.func' op "@compute" must use type of its ancestor 'llzk.struct' "@two::@good" as return type}}
      func @compute() -> !llzk.struct<@one::@good> {
        %self = new_struct : !llzk.struct<@one::@good>
        return %self : !llzk.struct<@one::@good>
      }
      func @constrain(%self: !llzk.struct<@one::@good>) {
        return
      }
    }
  }
}
// -----
module attributes {veridise.lang = "llzk"} {
  module { // expected-note {{unnamed 'builtin.module' here}}
    module @one {
      llzk.struct @good {
        // expected-error@+2 {{'llzk.func' op has ancestor 'builtin.module' without "veridise.lang" attribute or a name}}
        // expected-error@+1 {{could not find 'llzk.struct' named "@one::@good"}}
        func @compute() -> !llzk.struct<@one::@good> {
          %self = new_struct : !llzk.struct<@one::@good>
          return %self : !llzk.struct<@one::@good>
        }
        func @constrain(%self: !llzk.struct<@one::@good>) {
          return
        }
      }
    }
  }
}
// -----
module { // expected-note {{unnamed 'builtin.module' here}}
  // expected-error@+1 {{'llzk.struct' op has ancestor 'builtin.module' without "veridise.lang" attribute or a name}}
  llzk.struct @compute_with_wrong_ret {
    // expected-error@+1 {{'llzk.func' op "@compute" must use type of its ancestor 'llzk.struct' "@compute_with_wrong_ret" as return type}}
    func @compute() -> index {
      %b = arith.constant 2 : index
      return %b : index
    }

    func @constrain(%self: !llzk.struct<@compute_with_wrong_ret>) {
      return
    }
  }
}
// -----
module attributes {veridise.lang = "llzk"} {
  llzk.struct @constrain_without_args {
    func @compute() -> !llzk.struct<@constrain_without_args> {
      %self = new_struct : !llzk.struct<@constrain_without_args>
      return %self : !llzk.struct<@constrain_without_args>
    }
    // expected-error@+1 {{'llzk.func' op "@constrain" must have at least one input type}}
    func @constrain() { return }
  }
}
// -----
module attributes {veridise.lang = "llzk"} {
  llzk.struct @call_target_constrain_without_args<[@S]> {
    func @compute() -> !llzk.struct<@call_target_constrain_without_args<[@S]>> {
      %self = new_struct : !llzk.struct<@call_target_constrain_without_args<[@S]>>
      return %self : !llzk.struct<@call_target_constrain_without_args<[@S]>>
    }

    func @constrain(%self: !llzk.struct<@call_target_constrain_without_args<[@S]>>) {
      // expected-error@+1 {{'llzk.call' op target "@constrain" must have at least one input type}}
      llzk.call @S::@constrain() : () -> ()
      return
    }
  }
}
// -----
module attributes {veridise.lang = "llzk"} {
  llzk.struct @constrain_without_self_non_struct {
    func @compute(%a: !llzk.felt) -> !llzk.struct<@constrain_without_self_non_struct> {
      %self = new_struct : !llzk.struct<@constrain_without_self_non_struct>
      return %self : !llzk.struct<@constrain_without_self_non_struct>
    }
    // expected-error@+1 {{'llzk.func' op "@constrain" must use type of its ancestor 'llzk.struct' "@constrain_without_self_non_struct" as first input type}}
    func @constrain(%self: !llzk.felt) {
      return
    }
  }
}
// -----
module attributes {veridise.lang = "llzk"} {
  llzk.struct @call_target_constrain_without_self_non_struct<[@S]> {
    func @compute() -> !llzk.struct<@call_target_constrain_without_self_non_struct<[@S]>> {
      %self = new_struct : !llzk.struct<@call_target_constrain_without_self_non_struct<[@S]>>
      return %self : !llzk.struct<@call_target_constrain_without_self_non_struct<[@S]>>
    }

    func @constrain(%self: !llzk.struct<@call_target_constrain_without_self_non_struct<[@S]>>) {
      %0 = constfelt 1
      // expected-error@+1 {{'llzk.call' op target "@constrain" expected first input type '!llzk.tvar<@S>' but found '!llzk.felt'}}
      llzk.call @S::@constrain(%0) : (!llzk.felt) -> ()
      return
    }
  }
}
// -----
module attributes {veridise.lang = "llzk"} {
  llzk.struct @other_type { // expected-note {{uses this type instead}}
    func @compute() -> !llzk.struct<@other_type> {
      %self = new_struct : !llzk.struct<@other_type>
      return %self : !llzk.struct<@other_type>
    }
    func @constrain(%self: !llzk.struct<@other_type>) {
      return
    }
  }
  llzk.struct @constrain_without_self_wrong_struct {
    func @compute() -> !llzk.struct<@constrain_without_self_wrong_struct> {
      %self = new_struct : !llzk.struct<@constrain_without_self_wrong_struct>
      return %self : !llzk.struct<@constrain_without_self_wrong_struct>
    }
    // expected-error@+1 {{'llzk.func' op "@constrain" must use type of its ancestor 'llzk.struct' "@constrain_without_self_wrong_struct" as first input type}}
    func @constrain(%self: !llzk.struct<@other_type>) {
      return
    }
  }
}
// -----
module attributes {veridise.lang = "llzk"} {
  llzk.struct @call_target_constrain_without_self_wrong_tvar_param<[@S,@T]> {
    func @compute(%0: !llzk.tvar<@T>) -> !llzk.struct<@call_target_constrain_without_self_wrong_tvar_param<[@S,@T]>> {
      %self = new_struct : !llzk.struct<@call_target_constrain_without_self_wrong_tvar_param<[@S,@T]>>
      return %self : !llzk.struct<@call_target_constrain_without_self_wrong_tvar_param<[@S,@T]>>
    }

    func @constrain(%self: !llzk.struct<@call_target_constrain_without_self_wrong_tvar_param<[@S,@T]>>, %0: !llzk.tvar<@T>) {
      // expected-error@+1 {{'llzk.call' op target "@constrain" expected first input type '!llzk.tvar<@S>' but found '!llzk.tvar<@T>}}
      llzk.call @S::@constrain(%0) : (!llzk.tvar<@T>) -> ()
      return
    }
  }
}
// -----
module attributes {veridise.lang = "llzk"} {
  llzk.struct @mismatch_arg_types_1 {
    // expected-note@+1 {{"@compute" function defined here}}
    func @compute(%a: !llzk.felt) -> !llzk.struct<@mismatch_arg_types_1> {
      %self = new_struct : !llzk.struct<@mismatch_arg_types_1>
      return %self : !llzk.struct<@mismatch_arg_types_1>
    }
    // expected-error@+1 {{expected "@constrain" function argument types (sans the first one) to match "@compute" function argument types}}
    func @constrain(%self: !llzk.struct<@mismatch_arg_types_1>) {
      return
    }
  }
}
// -----
module attributes {veridise.lang = "llzk"} {
  llzk.struct @mismatch_arg_types_2 {
    // expected-note@+1 {{"@compute" function defined here}}
    func @compute() -> !llzk.struct<@mismatch_arg_types_2> {
      %self = new_struct : !llzk.struct<@mismatch_arg_types_2>
      return %self : !llzk.struct<@mismatch_arg_types_2>
    }
    // expected-error@+1 {{expected "@constrain" function argument types (sans the first one) to match "@compute" function argument types}}
    func @constrain(%self: !llzk.struct<@mismatch_arg_types_2>, %a: !llzk.felt) {
      return
    }
  }
}
// -----
module attributes {veridise.lang = "llzk"} {
  llzk.struct @mismatch_arg_types_3 {
    // expected-note@+1 {{"@compute" function defined here}}
    func @compute(%a: !llzk.felt) -> !llzk.struct<@mismatch_arg_types_3> {
      %self = new_struct : !llzk.struct<@mismatch_arg_types_3>
      return %self : !llzk.struct<@mismatch_arg_types_3>
    }
    // expected-error@+1 {{expected "@constrain" function argument types (sans the first one) to match "@compute" function argument types}}
    func @constrain(%self: !llzk.struct<@mismatch_arg_types_3>, %a: i1) {
      return
    }
  }
}
// -----
module attributes {veridise.lang = "llzk"} {
  // llzk.func @global_fun() -> () { return }
  llzk.struct @unknown_call_target_invalid_function_name<[@S]> {
    func @compute() -> !llzk.struct<@unknown_call_target_invalid_function_name<[@S]>> {
      %self = new_struct : !llzk.struct<@unknown_call_target_invalid_function_name<[@S]>>
      return %self : !llzk.struct<@unknown_call_target_invalid_function_name<[@S]>>
    }

    func @constrain(%self: !llzk.struct<@unknown_call_target_invalid_function_name<[@S]>>) {
      // expected-error@+1 {{'llzk.call' op targeting a struct must call "@compute" or "@constrain" only}}
      llzk.call @S::@global_fun() : () -> ()
      return
    }
  }
}

// -----

#map1 = affine_map<()[s0, s1] -> (s0 + s1)>
module attributes {veridise.lang = "llzk"} {
  llzk.struct @T2<[@N]> {
    func @compute() -> !llzk.struct<@T2<[@N]>> {
      %self = new_struct : <@T2<[@N]>>
      return %self : !llzk.struct<@T2<[@N]>>
    }
    func @constrain(%self : !llzk.struct<@T2<[@N]>>) {
      return
    }
  }
  llzk.struct @Tester<[@S0, @S1]> {
    // expected-error@+1 {{'llzk.func' op "@compute" parameters cannot contain affine map attributes but found '!llzk.struct<@T2<[affine_map<()[s0, s1] -> (s0 + s1)>]>>}}
    func @compute(%6: !llzk.struct<@T2<[#map1]>>) -> !llzk.struct<@Tester<[@S0, @S1]>> {
      %self = new_struct : <@Tester<[@S0, @S1]>>
      return %self : !llzk.struct<@Tester<[@S0, @S1]>>
    }
    func @constrain(%self: !llzk.struct<@Tester<[@S0, @S1]>>, %6: !llzk.struct<@T2<[#map1]>>) {
      return
    }
  }
}

// -----

#map1 = affine_map<()[s0, s1] -> (s0 + s1)>
module attributes {veridise.lang = "llzk"} {
  llzk.struct @T2<[@N]> {
    func @compute() -> !llzk.struct<@T2<[@N]>> {
      %self = new_struct : <@T2<[@N]>>
      return %self : !llzk.struct<@T2<[@N]>>
    }
    func @constrain(%self : !llzk.struct<@T2<[@N]>>) {
      return
    }
  }
  llzk.struct @Tester<[@S0, @S1]> {
     // expected-error@+1 {{'llzk.func' op "@constrain" parameters cannot contain affine map attributes but found '!llzk.struct<@T2<[affine_map<()[s0, s1] -> (s0 + s1)>]>>}}
    func @constrain(%self: !llzk.struct<@Tester<[@S0, @S1]>>, %6: !llzk.struct<@T2<[#map1]>>) {
      return
    }
    func @compute(%6: !llzk.struct<@T2<[#map1]>>) -> !llzk.struct<@Tester<[@S0, @S1]>> {
      %self = new_struct : <@Tester<[@S0, @S1]>>
      return %self : !llzk.struct<@Tester<[@S0, @S1]>>
    }
  }
}

// -----

!Signal = !llzk.struct<@Signal>
module attributes {veridise.lang = "llzk"} {
  // pre-defined
  llzk.struct @Signal {
    field @reg : !llzk.felt {llzk.pub}

    func @compute(%v: !llzk.felt) -> !llzk.struct<@Signal> {
      %self = new_struct : !llzk.struct<@Signal>
      writef %self[@reg] = %v : !llzk.struct<@Signal>, !llzk.felt
      return %self : !llzk.struct<@Signal>
    }

    func @constrain(%self: !llzk.struct<@Signal>, %v: !llzk.felt) {
      return
    }
  }

  llzk.struct @BadSignalIndex {
    field @idx : index

    func @compute(%s: !Signal) -> !llzk.struct<@BadSignalIndex> {
      %self = new_struct : !llzk.struct<@BadSignalIndex>
      // In the compute function, this is fine
      %reg = readf %s[@reg] : !Signal, !llzk.felt
      %idx = toindex %reg
      writef %self[@idx] = %idx : !llzk.struct<@BadSignalIndex>, index
      return %self : !llzk.struct<@BadSignalIndex>
    }

    func @constrain(%self: !llzk.struct<@BadSignalIndex>, %s: !Signal) {
      // expected-note@+1 {{Signal struct value is read here}}
      %reg = readf %s[@reg] : !Signal, !llzk.felt
      // Illegal signal to index conversion in constrain
      // expected-error@+1 {{'llzk.toindex' op input is derived from a Signal struct, which is illegal in struct constrain function}}
      %idx = toindex %reg
      %f = readf %self[@idx] : !llzk.struct<@BadSignalIndex>, index
      emit_eq %f, %idx : index
      return
    }
  }
}

// -----

!Signal = !llzk.struct<@Signal>
module attributes {veridise.lang = "llzk"} {
  // pre-defined
  llzk.struct @Signal {
    field @reg : !llzk.felt {llzk.pub}

    func @compute(%v: !llzk.felt) -> !llzk.struct<@Signal> {
      %self = new_struct : !llzk.struct<@Signal>
      writef %self[@reg] = %v : !llzk.struct<@Signal>, !llzk.felt
      return %self : !llzk.struct<@Signal>
    }

    func @constrain(%self: !llzk.struct<@Signal>, %v: !llzk.felt) {
      return
    }
  }

  llzk.struct @BadSignalIndex {
    func @compute(%s: !Signal) -> !llzk.struct<@BadSignalIndex> {
      %self = new_struct : !llzk.struct<@BadSignalIndex>
      return %self : !llzk.struct<@BadSignalIndex>
    }

    func @constrain(%self: !llzk.struct<@BadSignalIndex>, %s: !Signal) {
      // expected-note@+1 {{Signal struct value is read here}}
      %reg = readf %s[@reg] : !Signal, !llzk.felt
      %res = scf.while (%arg1 = %reg) : (!llzk.felt) -> !llzk.felt {
        %condition = arith.constant true
        scf.condition(%condition) %arg1 : !llzk.felt
      } do {
        ^bb0(%arg2: !llzk.felt):
          %next = llzk.add %arg2, %arg2
          scf.yield %next : !llzk.felt
      } attributes {}
      %lb = arith.constant 0 : index
      %up = arith.constant 4 : index
      %step = arith.constant 1 : index
      scf.for %iv = %lb to %up step %step {
        // expected-error@+1 {{'llzk.toindex' op input is derived from a Signal struct, which is illegal in struct constrain function}}
        %1 = llzk.toindex %res
      }
      return
    }
  }
}

// -----

!Signal = !llzk.struct<@Signal>
module attributes {veridise.lang = "llzk"} {
  // pre-defined
  llzk.struct @Signal {
    field @reg : !llzk.felt {llzk.pub}

    func @compute(%v: !llzk.felt) -> !llzk.struct<@Signal> {
      %self = new_struct : !llzk.struct<@Signal>
      writef %self[@reg] = %v : !llzk.struct<@Signal>, !llzk.felt
      return %self : !llzk.struct<@Signal>
    }

    func @constrain(%self: !llzk.struct<@Signal>, %v: !llzk.felt) {
      return
    }
  }

  llzk.struct @SignalAsIndexImplicit {
    func @compute(%s: !Signal) -> !llzk.struct<@SignalAsIndexImplicit> {
      %self = new_struct : !llzk.struct<@SignalAsIndexImplicit>
      return %self : !llzk.struct<@SignalAsIndexImplicit>
    }

    func @constrain(%self: !llzk.struct<@SignalAsIndexImplicit>, %s: !Signal) {
      // expected-note@+1 {{Signal struct value is read here}}
      %reg = readf %s[@reg] : !Signal, !llzk.felt
      %f0 = llzk.constfelt 0
      %b = cmp eq(%reg, %f0)
      %t = scf.if %b -> !llzk.felt {
        scf.yield %f0 : !llzk.felt
      } else {
        %f1 = llzk.constfelt 1
        scf.yield %f1 : !llzk.felt
      }
      // expected-error@+1 {{'llzk.toindex' op input is derived from a Signal struct, which is illegal in struct constrain function}}
      %1 = llzk.toindex %t
      return
    }
  }
}
